Fixed squished fields front page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -387,5 +387,17 @@ a:hover {
 }
 
 .home #header .search_c h1 {
-  padding-bottom:80px;
+  padding-bottom:0px;
+}
+
+@media (min-width:320px) {
+.front_page_search_fields {
+  padding-top:0px;
+} 
+}
+
+@media (min-width:961px) {
+.front_page_search_fields {
+  padding-top:70px;
+} 
 }
